<resources>
    <string name="app_name">Pan Comido</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="promotions">Promotions</string>
    <string name="orders_history">Order history</string>
    <string name="payment_methods">Payment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register">No account yet? Create one</string>

    <string name="nombre_del_restaurante">Name of the restaurant</string>
    <string name="menu">Menu</string>
    <string name="comments">Comments</string>
    <string name="name_of_the_dish">Name of the dish</string>
    <string name="update">Update</string>
    <string name="Loading">Loading…</string>
    <string name="payment_mode">Payment method</string>
    <string name="i_pay">I pay the bill</string>
    <string name="friends_pay">Split the bill with your friends</string>
    <string name="pay">Order</string>
    <string name="minus">-</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_menu">Go back to the main menu</string>
    <string name="payment_success">Thanks for your order! You can go back to the main menu and wait for your order to be ready.</string>
    <string name="see_order">See order</string>
    <string name="order_resume">Order resume</string>
    <string name="total">Total</string>
    <string name="continue_pay">Continue</string>
    <string name="plus">+</string>
    <string name="login">Already a member? Login</string>
    <string name="new_account">Create Account</string>
    <string name="terms">I accept the terms and conditions</string>
    <string name="phone">Phone</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="new_image">New image</string>
    <string name="city">City</string>
    <string name="account">Account</string>
    <string name="save">Save changes</string>
    <string name="account_details">Account details</string>
    <string name="default_notification_channel_id">0</string>
    <string name="order_history">Order History</string>
    <string name="order_again">Order Again</string>
    <string name="command_ready">Your command is ready</string>
    <string name="command_ready_message">Present the following code at the restaurant</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="command">Command</string>
</resources>
