<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_promotion"
            android:title="@string/promotions" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_history"
            android:title="@string/orders_history" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_payment"
            android:title="@string/payment_methods" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/logout" />
    </group>

    <!--item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item-->

</menu>
