<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="cosw.eci.edu.pancomido.ui.fragment.PaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/payment_mode"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:textSize="19sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

    <RadioButton
        android:id="@+id/i_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_pay"
        android:textSize="17sp"/>

    <RadioButton
        android:id="@+id/friend_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends_pay"
        android:textSize="17sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray">

    </View>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Buscar amigos"
        android:visibility="gone"/>
    <SearchView
        android:id="@+id/find_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:queryHint="Buscar amigos"
        android:visibility="gone">
    </SearchView>
    <ListView
        android:id="@+id/friend_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </ListView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/pay_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:text="@string/pay"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/cancel_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@color/red"
                android:textColor="@android:color/white"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
