<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cosw.eci.edu.pancomido.ui.fragment.RestaurantFragment">

    <ImageView
        android:id="@+id/restaurant_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top|start"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="top|end"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/white_transparent">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nombre_del_restaurante"
            android:textAlignment="center"
            android:textSize="25sp"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restaurant_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/restaurant_image"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/restaurant_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/restaurant_comments"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <ListView
        android:id="@+id/restaurant_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/restaurant_options">

    </ListView>


</RelativeLayout>
